# bountyboard

./: .gitignore  Cargo.toml  FEATURES.md  PLAN.md  README.md
api/: Cargo.toml
api/src/: consts.rs  error.rs  instruction.rs  lib.rs  sdk.rs
api/src/state/: config.rs  mod.rs  task.rs
frontend/: .env  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/agents/[name]/: page.tsx
frontend/app/analytics/: page.tsx
frontend/app/api/agents/: route.ts
frontend/app/api/agents/[name]/: route.ts
frontend/app/api/stats/: route.ts
frontend/app/api/tasks/: route.ts
frontend/app/api/tasks/[id]/: route.ts
frontend/app/api/tasks/[id]/approve/: route.ts
frontend/app/api/tasks/[id]/cancel/: route.ts
frontend/app/components/: Footer.tsx  Navbar.tsx  PostBountyModal.tsx  StatusBadge.tsx  TaskCard.tsx  Toast.tsx
frontend/app/docs/: page.tsx
frontend/app/leaderboard/: page.tsx
frontend/app/tasks/: page.tsx
frontend/app/tasks/[id]/: page.tsx
frontend/lib/: apiHelpers.ts  config.ts  mockData.ts  solana.ts  store.ts
frontend/public/: skill.md
program/: Cargo.toml
program/src/: approve_work.rs  cancel_task.rs  claim_expired.rs  claim_task.rs  create_task.rs  dispute.rs  initialize.rs  lib.rs  reject_work.rs  resolve_dispute.rs  submit_work.rs
sdk/: package-lock.json  package.json
sdk/src/: constants.ts  index.ts  instructions.ts  pda.ts  state.ts  types.ts
tests/: devnet-test.ts  lifecycle-test.ts  multi-agent-demo.ts  package-lock.json  package.json  seed-tasks.ts  tsconfig.json
(+4 files in other folders)
