[workspace]
members = ["api", "program"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
# Steel framework
steel = { version = "4.0.4" }

# Solana
solana-program = "^2.1"

# Serialization
bytemuck = "1.14.3"
num_enum = "0.7.2"
thiserror = "1.0.57"

# Internal
bountyboard-api = { path = "./api", version = "0.1.0" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
